--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 127.0.0.1:27017:27017
     environment:
-      - MONGO_DB:pwndoc
+      - MONGO_DB=pwndoc
     networks:
       - backend
 
@@ -42,8 +42,41 @@ services:
     networks:
       - backend
 
+  ollama:
+    image: ollama/ollama:latest
+    container_name: pwndoc-ollama
+    volumes:
+      - ollama-models:/root/.ollama
+      - ./backend/scripts:/app/scripts
+    ports:
+      - "127.0.0.1:11434:11434"
+    deploy:
+      resources:
+        limits:
+          memory: 12G
+          cpus: '4'
+        reservations:
+          memory: 8G
+          cpus: '2'
+    environment:
+      - OLLAMA_HOST=0.0.0.0
+      - OLLAMA_MODELS=/root/.ollama/models
+      - OLLAMA_MODEL=mistral
+      - "OLLAMA_MODEL_PARAMS={\"temperature\": 0.3, \"top_p\": 0.8}"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    entrypoint: ["/app/scripts/init-ollama.sh"]
+    command: ["serve"]
+    restart: always
+    networks:
+      - backend
+
 volumes:
   mongo-data:
+  ollama-models:
 
 networks:
   backend:
